@@ -5008,6 +5008,8 @@ argument_list|(
 name|conf
 argument_list|)
 decl_stmt|;
+try|try
+block|{
 name|namesystem
 operator|.
 name|loadFSImage
@@ -5026,6 +5028,31 @@ name|nameserviceId
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ioe
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Encountered exception loading fsimage"
+argument_list|,
+name|ioe
+argument_list|)
+expr_stmt|;
+name|fsImage
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+throw|throw
+name|ioe
+throw|;
+block|}
 name|long
 name|timeTakenToLoadFSImage
 init|=
