@@ -3765,6 +3765,8 @@ argument_list|,
 name|editDirsToFormat
 argument_list|)
 decl_stmt|;
+try|try
+block|{
 name|FSNamesystem
 name|fsn
 init|=
@@ -3811,6 +3813,31 @@ argument_list|,
 name|clusterId
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ioe
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Encountered exception during format: "
+argument_list|,
+name|ioe
+argument_list|)
+expr_stmt|;
+name|fsImage
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+throw|throw
+name|ioe
+throw|;
+block|}
 return|return
 literal|false
 return|;
@@ -4107,6 +4134,11 @@ name|existingStorage
 init|=
 literal|null
 decl_stmt|;
+name|FSImage
+name|sharedEditsImage
+init|=
+literal|null
+decl_stmt|;
 try|try
 block|{
 name|FSNamesystem
@@ -4153,9 +4185,8 @@ argument_list|(
 name|conf
 argument_list|)
 decl_stmt|;
-name|FSImage
 name|sharedEditsImage
-init|=
+operator|=
 operator|new
 name|FSImage
 argument_list|(
@@ -4171,7 +4202,7 @@ argument_list|()
 argument_list|,
 name|sharedEditsDirs
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|sharedEditsImage
 operator|.
 name|getEditLog
@@ -4295,6 +4326,38 @@ comment|// aborted
 block|}
 finally|finally
 block|{
+if|if
+condition|(
+name|sharedEditsImage
+operator|!=
+literal|null
+condition|)
+block|{
+try|try
+block|{
+name|sharedEditsImage
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ioe
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Could not close sharedEditsImage"
+argument_list|,
+name|ioe
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|// Have to unlock storage explicitly for the case when we're running in a
 comment|// unit test, which runs in the same JVM as NNs.
 if|if
