@@ -1177,6 +1177,8 @@ argument_list|(
 name|conf
 argument_list|)
 decl_stmt|;
+try|try
+block|{
 name|image
 operator|.
 name|getStorage
@@ -1258,6 +1260,22 @@ argument_list|,
 name|hash
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ioe
+parameter_list|)
+block|{
+name|image
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+throw|throw
+name|ioe
+throw|;
+block|}
 return|return
 literal|0
 return|;
